# Atomize

./: .gitignore  .gitmodules  checkings.md  license.md  liveplot_test.py  liveplot_test_append.py  pyproject.toml  readme.md  requirements.txt  setup.py  test_error_messages.py  test_script_pyqt.py  to_do_list.md
atomize/: .gitignore  __init__.py  __main__.py  codeeditor.py  config.ini
atomize/device_modules/: Agilent_53131a.py  Agilent_53181a.py  Agilent_5343a.py  BH_15.py  CPWplus_150.py  CWplus150.py  CWplus_150.py  Cryomagnetics_4G.py  Cryomagnetics_LM510.py  Cryomech_CPA1110.py  ECC_15K.py  ER031M.py  ER_031M.py  Gentec_Solo2.py  ITC_503.py  ITC_FC.py  (+68 more)
device_modules/: CWplus150.py  ER031M.py  Lakeshore325.py  Lakeshore331.py  Lakeshore332.py  Lakeshore335.py  Lakeshore335_gpib.py  Lakeshore336.py  Lakeshore340.py  RODOS_10N.py  SR_810.py  SR_830.py  SR_850.py  agilent-53181a.py  agilent_53131a.py  agilent_53181a.py  keysight_2000_Xseries.py  keysight_3000_Xseries.py  keysight_3034T.py
documentation/: device_functions.md  devices.md  lock_in_amplifier_functions.md  oscilloscope_functions.md  other_device_functions.md  temperature_controller_functions.md  wave_generator_functions.md
main/: codeeditor.py  main_window.py  messenger_socket_server.py  test_1d_exp_with_graph.py  test_script.py  test_script_2.py  test_script_pyqt.py
math_modules/: test.py
plot_modules/: matplotlibplotter.py  pyqtplotter.py
tests/: conftest.py  test_config_utils.py  test_device_modules_smoke.py  test_general_functions.py  test_lakeshore_335.py  test_owen.py  test_termodat.py
(+499 files in other folders)
